k8s/php-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-app-service
  namespace: crud-app
spec:
  selector:
    app: php-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
